@@ -139,7 +139,7 @@ dynamic_collections:
         hulu: 15
         netflix: 8
         now: 39
-        paramount: 531
+        paramount: 531|1770
         peacock: 387
         amazon: 9
         showtime: 37
